# docs2md

./: .env.example  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
docs2md/: cli.py  discovery.py  scraper.py
